Précision fichier de configuration par défaut redshift.

--- a/redshift.conf
+++ b/redshift.conf
@@ -1,3 +1,5 @@
+; Un fichier de configuration par défaut est disponible à l'adresse :
+; https://github.com/jonls/redshift/blob/master/redshift.conf.sample
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
