force-window=immediate -> force-window=yes.

--- a/mpv.conf
+++ b/mpv.conf
@@ -10,5 +10,5 @@
 # Forcer la présence d'une fenêtre même pour un fichier audio.
 # Cela permet aussi à mpv d'empêcher la mise en veille (les triggers du locker
 # définis dans /usr/local/bin/power_management sont désactivés pendant la lecture
-# du fichier par mpv - mettre mpv en pause les réactive).
-force-window=immediate
+# du fichier par mpv ; mettre mpv en pause les réactive).
+force-window=yes
