tmux.conf : commentaire sur le fichier de configuration par défaut.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,12 @@
-###########################################
-# P R É F É R E N C S   G É N É R A L E S #
-###########################################
+#############################################
+# P R É F É R E N C E S   G É N É R A L E S #
+#############################################
 #
-# On peut créer un fichier de configuration par défaut à partir des paramètres
-# actuels avec l'instruction : tmux show -g > ~/.tmux.conf
+# Il n'y a pas de fichier de configuration par défaut dans tmux.
+# Un court exemple de fichier de configuration est disponible à l'adresse :
+# https://github.com/tmux/tmux/blob/master/example_tmux.conf
+# On peut aussi créer un fichier de configuration par défaut à partir des
+# paramètres actuels avec l'instruction : tmux show -g > ~/.tmux.conf
 # ou (avant la version 1.8) tmux show -g | cat > ~/.tmux.conf
 #
 # set est un alias pour set-option
@@ -36,9 +39,10 @@ bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 # Réduire le délai entre les changements de mode
 set-option -sg escape-time 0
 
-###########################################
-# K E Y B I N D S                         #
-###########################################
+
+#############################################
+# K E Y B I N D S                           #
+#############################################
 #
 # La touche "Ctrl" n'étant pas sensible à la casse, les combinaisons
 # incluant C-S (Ctrl+Shift) sont impossibles.
@@ -108,9 +112,9 @@ unbind f
 bind-key f kill-session
 
 
-###########################################
-# C O U L E U R S                         #
-###########################################
+#############################################
+# C O U L E U R S                           #
+#############################################
 #
 # Les couleurs possibles (cf. man tmux) sont : default, black, red, green,
 # yellow, blue, magenta, cyan, white ainsi que certaines variantes avec
@@ -135,9 +139,9 @@ set-option -g display-panes-colour brightred
 set-window-option -g clock-mode-colour green
 
 
-###########################################
-# B A R R E   D ' É T A T                 #
-###########################################
+#############################################
+# B A R R E   D ' É T A T                   #
+#############################################
 
 # Ne rien afficher dans la partie en bas à droite
 set-option -g status-right ''
