tmux.com : focus-events on

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,9 @@
 # set est un alias pour set-option
 # setw est un alias pour set-window-option
 
+# Déclencher les événements corrects de focus, notamment pour vim
+set-option -g focus-events on
+
 # Délai entre deux commandes sans répéter le préfixe, en ms (défaut : 500)
 # Vaut pour tous les raccourcis/keybinds définis avec l'option -r
 set-option -g repeat-time 200
