--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
-#############################################
-# P R É F É R E N C E S   G É N É R A L E S #
-#############################################
+#####################################################
+# P R É F É R E N C E S   G É N É R A L E S         #
+#####################################################
 #
 # Il n'y a pas de fichier de configuration par défaut dans tmux.
 # Un court exemple de fichier de configuration est disponible à l'adresse :
@@ -43,9 +43,9 @@ bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 set-option -sg escape-time 0
 
 
-#############################################
-# K E Y B I N D S                           #
-#############################################
+#####################################################
+# K E Y B I N D S                                   #
+#####################################################
 #
 # La touche "Ctrl" n'étant pas sensible à la casse, les combinaisons
 # incluant C-S (Ctrl+Shift) sont impossibles.
@@ -64,10 +64,10 @@ bind-key -r - split-window -v
 # Sélection des panneaux (sans le préfixe)
 unbind Up
 unbind Down
-bind-key -n S-Up select-pane -U
-bind-key -n S-Right select-pane -R
-bind-key -n S-Down select-pane -D
-bind-key -n S-Left select-pane -L
+#bind-key -n S-Up select-pane -U
+#bind-key -n S-Right select-pane -R
+#bind-key -n S-Down select-pane -D
+#bind-key -n S-Left select-pane -L
 
 # Redimensionnement des panneaux (avec préfixe)
 unbind C-Up
@@ -115,9 +115,9 @@ unbind f
 bind-key f kill-session
 
 
-#############################################
-# C O U L E U R S                           #
-#############################################
+#####################################################
+# C O U L E U R S                                   #
+#####################################################
 #
 # Les couleurs possibles (cf. man tmux) sont : default, black, red, green,
 # yellow, blue, magenta, cyan, white ainsi que certaines variantes avec
@@ -142,9 +142,9 @@ set-option -g display-panes-colour brightred
 set-window-option -g clock-mode-colour green
 
 
-#############################################
-# B A R R E   D ' É T A T                   #
-#############################################
+#####################################################
+# B A R R E   D ' É T A T                           #
+#####################################################
 
 # Ne rien afficher dans la partie en bas à droite
 set-option -g status-right ''
@@ -157,3 +157,27 @@ set-window-option -g window-status-style bg=default,fg=brightblue
 
 # Couleurs du nom de la fenêtre active
 set-window-option -g window-status-current-style bg=default,fg=brightred
+
+
+#####################################################
+# P L U G I N   V I M   T M U X   N A V I G A T O R #
+#####################################################
+#
+# https://github.com/christoomey/vim-tmux-navigator
+
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'S-Left' if-shell "$is_vim" 'send-keys S-Left'  'select-pane -L'
+bind-key -n 'S-Down' if-shell "$is_vim" 'send-keys S-Down'  'select-pane -D'
+bind-key -n 'S-Up' if-shell "$is_vim" 'send-keys S-Up'  'select-pane -U'
+bind-key -n 'S-Right' if-shell "$is_vim" 'send-keys S-Right'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'S-Left' select-pane -L
+bind-key -T copy-mode-vi 'S-Down' select-pane -D
+bind-key -T copy-mode-vi 'S-Up' select-pane -U
+bind-key -T copy-mode-vi 'S-Right' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
