tmux.conf : raccourcis claviers en mode copie.

--- a/tmux.conf
+++ b/tmux.conf
@@ -90,6 +90,12 @@ unbind [
 unbind ]
 bind-key Escape copy-mode
 
+# Permettre aux touches Home, End et Ctrl-Flèches de fonctionner en mode "copie"
+bind-key -T copy-mode-vi Home send-keys 0
+bind-key -T copy-mode-vi End send-keys $
+bind-key -T copy-mode-vi C-Left send-keys -X previous-word
+bind-key -T copy-mode-vi C-Right send-keys -X next-word
+
 # Copier dans le clipboard (au lieu du buffer de tmux)
 # Requiert l'installation du paquet xclip
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "xclip -i -sel clip > /dev/null"
