Ajustements 00-keyboard.conf, 50-mouse.conf et 70-touchpad.conf

--- a/00-keyboard.conf
+++ b/00-keyboard.conf
@@ -1,8 +1,9 @@
-# Read and parsed by systemd-localed. It's probably wise not to edit this file
-# manually too freely.
+# Read and parsed by systemd-localed. It's probably wise not to edit this
+# file manually too freely.
 #
-# Remarque : fichier chargé au démarrage de X -> toute modification nécessite
-# de relancer l'ordi ou de redémarrer X (en fermant puis rouvrant la session).
+# Remarque : fichier chargé au démarrage de X -> toute modification
+# nécessite de relancer l'ordi ou de redémarrer X (en fermant puis
+# rouvrant la session).
 #
 # Les paramètres définis ici sont appliqués par défaut -> ils s'appliquent
 # également à tout nouveau périphérique USB à chaque fois qu'il est branché.
@@ -13,12 +14,14 @@
 # liste des dispositions (layout) : localectl list-x11-keymap-layouts
 # Liste des modèles : localectl list-x11-keymap-models
 # Liste des variantes : localectl list-x11-keymap-variants [layout]
-# Liste des options : localectl list-x11-keymap-options (ex. Option "XkbOptions" "grp:shifts_toggle")
+# Liste des options : localectl list-x11-keymap-options (ex.
+# Option "XkbOptions" "grp:shifts_toggle")
 #
 # Il est possible de définir autant de sections que nécessaires, en ciblant
 # un périphérique particulier grâce à "MatchProduct" et "MatchVendor".
 # Récupérer les identifiants (nom du produit et vendeur) grâce à la commande
-# "xinput list" dans un terminal, puis créer une nouvelle section ci-dessous.
+# "xinput list" dans un terminal, puis créer une nouvelle section
+# ci-dessous.
 # Exemple :
 # Section "InputClass"
 #   Identifier "MonNouveauClavier"
@@ -39,11 +42,12 @@
 Section "InputClass"
     Identifier "keyboard"
     MatchIsKeyboard "on"
-    # Donne la possibilité de changer la disposition du clavier entre le français
-    # et le grec.
+    # Donne la possibilité de changer la disposition du clavier entre
+    # le français et le grec.
     # Ajouter "il,ara,ru" pour avoir la possibilité d'utiliser aussi
     # les langues hébreux,arabe et cyrillique (-> "fr,gr,il,ara,ru").
-    # Cf. ci-dessus pour la commande permettant de voir toutes les dispositions possibles.
+    # Cf. ci-dessus pour la commande permettant de voir toutes les
+    # dispositions possibles.
     #
     # La combinaison de touches pour passer d'une disposition de clavier
     # à l'autre est définie dans .config/openbox/rc.xml
@@ -53,7 +57,11 @@ Section "InputClass"
     Option "XkbLayout" "fr,grec"
     Option "XkbModel" "pc105"
     Option "XkbVariant" "oss,"
-    # Utiliser la combinaison de touches "alt gr" et "Windows" comme touche Compose.
+    # Définir la position de la touche "Compose".
+    # La liste des positions possibles est disponible dans la page du
+    # manuel "man xkeyboard-config" (chercher la section "Position of
+    # Compose key").
+    # Utiliser la combinaison "AltGr" et "Windows" comme touche Compose.
     Option "XkbOptions" "compose:lwin-altgr"
     # !!! L'option "Autorepeat" a été supprimée du driver à partir de
     # la version 1.4.0 (cf. le wiki d'Arch) !!!
