--- a/50-mouse.conf
+++ b/50-mouse.conf
@@ -1,5 +1,6 @@
-# Remarque : fichier chargé au démarrage de X -> toute modification nécessite
-# de relancer l'ordi ou de redémarrer X (sudo systemctl restart lxdm)
+# Remarque : fichier chargé au démarrage de X -> toute modification
+# nécessite de relancer l'ordi ou de redémarrer X (sudo systemctl
+# restart lxdm).
 #
 # Les paramètres définis ici sont appliqués par défaut -> ils s'appliquent
 # également à tout nouveau périphérique USB à chaque fois qu'il est branché.
@@ -7,7 +8,8 @@
 # Il est possible de définir autant de sections que nécessaires, en ciblant
 # un périphérique particulier grâce à "MatchProduct" et "MatchVendor".
 # Récupérer les identifiants (nom du produit et vendeur) grâce à la commande
-# "xinput list" dans un terminal, puis créer une nouvelle section ci-dessous.
+# "xinput list" dans un terminal, puis créer une nouvelle section
+# ci-dessous.
 # Exemple :
 # Section "InputClass"
 #   Identifier "MaNouvelleSouris"
@@ -30,8 +32,8 @@ Section "InputClass"
     MatchIsPointer "on"
     # AccelerationNumerator (= accélération) : de 1 (lente) à 10 (rapide)
     # (fractions possibles : 3/2...)
-    # AccelerationThreshold (= sensibilité = nombre de pixels traversés avant
-    # accélération) : de 100 (faible) à 1 (forte)
+    # AccelerationThreshold (= sensibilité = nombre de pixels traversés
+    # avant accélération) : de 100 (faible) à 1 (forte)
     # Valeurs respectives par défaut : 2 1 4
     # Valeurs respectives pour désactiver l'accélération : 1 1 0
     Option "AccelerationNumerator" "4"
