--- a/70-touchpad.conf
+++ b/70-touchpad.conf
@@ -1,5 +1,6 @@
-# Remarque : fichier chargé au démarrage de X -> toute modification nécessite
-# de relancer l'ordi ou de redémarrer X (sudo systemctl restart lxdm)
+# Remarque : fichier chargé au démarrage de X -> toute modification
+# nécessite de relancer l'ordi ou de redémarrer X (sudo systemctl
+# restart lxdm).
 #
 # Les paramètres définis ici sont appliqués par défaut -> ils s'appliquent
 # également à tout nouveau périphérique USB à chaque fois qu'il est branché.
@@ -7,7 +8,8 @@
 # Il est possible de définir autant de sections que nécessaires, en ciblant
 # un périphérique particulier grâce à "MatchProduct" et "MatchVendor".
 # Récupérer les identifiants (nom du produit et vendeur) grâce à la commande
-# "xinput list" dans un terminal, puis créer une nouvelle section ci-dessous.
+# "xinput list" dans un terminal, puis créer une nouvelle section
+# ci-dessous.
 # Exemple :
 # Section "InputClass"
 #   Identifier "MonNouveauTouchpad" # le nom n'importe pas
@@ -42,7 +44,8 @@
 # xinput --disable 10 OU xinput --disable "SynPS/2 Synaptics TouchPad"
 # Pour le réactiver : "xinput --enable <id_OU_nom>"
 #
-# Plusieurs drivers sont possibles : xf86-input-libinput, xf86-input-synaptics, xf86-input-evdev...
+# Plusieurs drivers sont possibles : xf86-input-libinput,
+# xf86-input-synaptics, xf86-input-evdev...
 #
 # Voir "man xorg.conf" pour plus de détails.
 Section "InputClass"
