--- a/input.conf
+++ b/input.conf
@@ -62,12 +62,10 @@ g script-message-to crop start-crop
 G vf del -1
 y script-message-to encode set-timestamp reenc
 Y script-message-to encode set-timestamp slice
-# Script mpv_crop_script
-Ctrl+Shift+s script-binding crop-screenshot
 # Script playlistmanager
 # À définir dans script-opts/playlistmanager.conf
 # Script cycle-commands
-# La ligne suivante ne fonctionne pas car mpv n'accepte pas de "cycle-values" ayant des valeurs identiques (plusieurs fois "Sans" par ex.)
+# La ligne suivante ne fonctionne pas car mpv n'accepte pas de "cycle-values" ayant des valeurs identiques (plusieurs fois "Sans" par ex.), d'où l'utilisation du plugin cycle-commands.
 #V no-osd cycle-values sub-font "Sans" "Sans" "Serif" "Serif" "Serif" "Sans"; no-osd cycle-values sub-color "#FFFF00" "#FFFF00" "#FFFFFF" "#FFFF00" "#FFFF00" "#FFFFFF"; no-osd cycle-values sub-border-color "#000000" "#FFFFFF" "#000000" "#000000" "#FFFFFF" "#000000"; no-osd cycle-values sub-ass-override "force" "force" "force" "force" "force" "force"
 # On passe donc par le script cycle-commands
 V script-message cycle-commands "set sub-font Sans ; set sub-color #FFFF00 ; set sub-border-color #000000 ; set sub-ass-override force | set sub-font Sans ; set sub-color #000000 ; set sub-border-color #FFFFFF ; set sub-ass-override force | set sub-font Serif ; set sub-color #FFFFFF ; set sub-border-color #000000 ; set sub-ass-override force | set sub-font Serif ; set sub-color #FFFF00 ; set sub-border-color #000000 ; set sub-ass-override force | set sub-font Serif ; set sub-color #000000 ; set sub-border-color #FFFFFF ; set sub-ass-override force | set sub-font Sans ; set sub-color #FFFFFF ; set sub-border-color #000000 ; set sub-ass-override force"
