Màj playlistmanager.conf

--- a/playlistmanager.conf
+++ b/playlistmanager.conf
@@ -40,8 +40,8 @@ alphanumsort=yes
 #linux | windows | auto
 system=auto
 
-#path where you want to save playlists, notice trailing \ or /. Do not use shortcuts like ~ or $HOME
-playlist_savepath=/home/anon/Documents/
+#Use ~ for home directory. Leave as empty to use mpv/playlists
+playlist_savepath=
 
 #2 shows playlist, 1 shows current file(filename strip applied), 0 shows nothing
 show_playlist_on_fileload=0
