Raccourci clavier pour afficher le titre du fichier dans feh et mpv.

--- a/input.conf
+++ b/input.conf
@@ -47,7 +47,7 @@ z ignore
 #Ctrl+D add sub-delay -0.1
 #Ctrl+d add sub-delay +0.1
 r ignore
-t ignore
+t show-text "Chemin : ${working-directory}\n${path}\n(${playlist-pos-1} sur ${playlist-count})" 4000
 Ctrl+H add sub-pos -1
 Ctrl+h add sub-pos +1
 Ctrl+T add sub-scale -0.1
