00-keyboard.conf : correction des dispositions de clavier.

--- a/00-keyboard.conf
+++ b/00-keyboard.conf
@@ -54,9 +54,9 @@ Section "InputClass"
     #
     # Les fichiers de configuration peuvent être listés, visualisés, ou même
     # édités, ajoutés ou créés dans le dossier /usr/share/X11/xkb/symbols/
-    Option "XkbLayout" "fr,fr,fr"
+    Option "XkbLayout" "fr,grec,api"
     Option "XkbModel" "pc105"
-    Option "XkbVariant" "oss,grec,api"
+    Option "XkbVariant" "oss,,"
     # Définir la position de la touche "Compose".
     # La liste des positions possibles est disponible dans la page du
     # manuel "man xkeyboard-config" (chercher la section "Position of
