--- a/picom.conf
+++ b/picom.conf
@@ -85,6 +85,7 @@ shadow-exclude = [
     "name = 'Docky'",
     "name = 'Kupfer'",
     "name = 'xfce4-notifyd'",
+    "name = 'cpt_frame_window'",
     "name *= 'polybar'",
     "name *= 'VLC'",
     "name *= 'compton'",
