input.conf : PGUP et PGDOWN inversés.

--- a/input.conf
+++ b/input.conf
@@ -27,6 +27,11 @@ B cycle-values loop "inf" "no"
 ENTER ignore
 HOME osd-msg seek 0 absolute exact; set pause yes
 END osd-msg seek 100 absolute-percent exact; set keep-open yes; set pause yes
+# PGUP et PGDOWN sont inversés par défaut
+PGUP add chapter -1
+PGDWN add chapter 1
+Shift+PGUP seek -600
+Shift+PGDWN seek 600
 #L add video-rotate -90
 #R add video-rotate 90
 L script-message Cycle_Video_Rotate -90
