--- a/tmux.conf
+++ b/tmux.conf
@@ -58,31 +58,11 @@ unbind %
 bind-key -r | split-window -h
 bind-key -r - split-window -v
 
-# Redimensionnement des panneaux (avec préfixe)
-unbind C-Up
-unbind C-Down
-unbind C-Left
-unbind C-Right
-unbind M-Up
-unbind M-Down
-unbind M-Left
-unbind M-Right
-bind-key -r S-Up resize-pane -U
-bind-key -r S-Down resize-pane -D
-bind-key -r S-Left resize-pane -L
-bind-key -r S-Right resize-pane -R
-
 # Détacher un panneau
 bind-key d break-pane
 bind-key ! detach-client
 
-# Fenêtres précédentes et suivantes (avec préfixe)
-unbind n
-unbind p
-bind-key -r Right next-window
-bind-key -r Left previous-window
-
-# Entrer dans le mode "copie" avec Préfixe+Esc
+# Entrer dans le mode "copie" avec Esc (avec préfixe)
 unbind [
 unbind ]
 bind-key Escape copy-mode
@@ -161,16 +141,26 @@ set-window-option -g window-status-current-style bg=default,fg=brightred
 # https://github.com/christoomey/vim-tmux-navigator
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'S-Left' if-shell "$is_vim" 'send-keys S-Left' 'select-pane -L'
-bind-key -n 'S-Down' if-shell "$is_vim" 'send-keys S-Down' 'select-pane -D'
-bind-key -n 'S-Up' if-shell "$is_vim" 'send-keys S-Up' 'select-pane -U'
-bind-key -n 'S-Right' if-shell "$is_vim" 'send-keys S-Right' 'select-pane -R'
+bind-key -n 'C-Left' if-shell "$is_vim" 'send-keys C-Left'  'select-pane -L'
+bind-key -n 'C-Down' if-shell "$is_vim" 'send-keys C-Down'  'select-pane -D'
+bind-key -n 'C-Up' if-shell "$is_vim" 'send-keys C-Up'  'select-pane -U'
+bind-key -n 'C-Right' if-shell "$is_vim" 'send-keys C-Right'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\' 'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\' 'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-bind-key -T copy-mode-vi 'S-Left' select-pane -L
-bind-key -T copy-mode-vi 'S-Down' select-pane -D
-bind-key -T copy-mode-vi 'S-Up' select-pane -U
-bind-key -T copy-mode-vi 'S-Right' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+#####################################################
+# P L U G I N   V I M   T M U X   R E S I Z E R     #
+#####################################################
+#
+# https://github.com/RyanMillerC/better-vim-tmux-resizer
+
+# La ligne is_vim est déjà définie pour le plugin Vim Tmux Navigator
+#is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n S-Left if-shell "$is_vim" "send-keys S-Left"  "resize-pane -L 2"
+bind-key -n S-Down if-shell "$is_vim" "send-keys S-Down"  "resize-pane -D 2"
+bind-key -n S-Up if-shell "$is_vim" "send-keys S-Up"  "resize-pane -U 2"
+bind-key -n S-Right if-shell "$is_vim" "send-keys S-Right"  "resize-pane -R 2"
