Corrections mineures du dernier commit.

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,7 +62,7 @@ bind-key -r - split-window -v
 bind-key d break-pane
 bind-key ! detach-client
 
-# Entrer dans le mode "copie" avec Esc (avec préfixe)
+# Entrer dans le mode "copie" avec Préfixe+Esc
 unbind [
 unbind ]
 bind-key Escape copy-mode
