tmux.conf : comportement normal de Ctrl+flèches avec un seul panneau.

--- a/tmux.conf
+++ b/tmux.conf
@@ -141,15 +141,12 @@ set-window-option -g window-status-current-style bg=default,fg=brightred
 # https://github.com/christoomey/vim-tmux-navigator
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-Left' if-shell "$is_vim" 'send-keys C-Left'  'select-pane -L'
-bind-key -n 'C-Down' if-shell "$is_vim" 'send-keys C-Down'  'select-pane -D'
-bind-key -n 'C-Up' if-shell "$is_vim" 'send-keys C-Up'  'select-pane -U'
-bind-key -n 'C-Right' if-shell "$is_vim" 'send-keys C-Right'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+# Keybinds modifiés pour garder le fonctionnement normal de Ctrl+flèches
+# lorsqu'il n'y a qu'un seul panneau existant
+bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Left" "select-pane -L"' 'send-keys C-Left'
+bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Down" "select-pane -D"' 'send-keys C-Down'
+bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Up" "select-pane -U"' 'send-keys C-Up'
+bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Right" "select-pane -R"' 'send-keys C-Right'
 
 
 #####################################################
@@ -160,7 +157,7 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 
 # La ligne is_vim est déjà définie pour le plugin Vim Tmux Navigator
 #is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n S-Left if-shell "$is_vim" "send-keys S-Left"  "resize-pane -L 2"
-bind-key -n S-Down if-shell "$is_vim" "send-keys S-Down"  "resize-pane -D 2"
-bind-key -n S-Up if-shell "$is_vim" "send-keys S-Up"  "resize-pane -U 2"
-bind-key -n S-Right if-shell "$is_vim" "send-keys S-Right"  "resize-pane -R 2"
+bind-key -n 'S-Left' if-shell "$is_vim" 'send-keys S-Left' 'resize-pane -L 2'
+bind-key -n 'S-Down' if-shell "$is_vim" 'send-keys S-Down' 'resize-pane -D 2'
+bind-key -n 'S-Up' if-shell "$is_vim" 'send-keys S-Up' 'resize-pane -U 2'
+bind-key -n 'S-Right' if-shell "$is_vim" 'send-keys S-Right' 'resize-pane -R 2'
