tmux.conf : 'set-option -gs' inutile -> 'set-option -g'.

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Réduire le délai entre les changements de mode
-set-option -sg escape-time 0
+set-option -g escape-time 0
 
 
 #####################################################
