--- a/tmux.conf
+++ b/tmux.conf
@@ -143,10 +143,10 @@ set-window-option -g window-status-current-style bg=default,fg=brightred
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # Keybinds modifiés pour garder le fonctionnement normal de Ctrl+flèches
 # lorsqu'il n'y a qu'un seul panneau existant
-bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Left" "select-pane -L"' 'send-keys C-Left'
-bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Down" "select-pane -D"' 'send-keys C-Down'
-bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Up" "select-pane -U"' 'send-keys C-Up'
-bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Right" "select-pane -R"' 'send-keys C-Right'
+bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Left" "select-pane -L"' 'if-shell "$is_vim" "send-keys C-H" "send-keys C-Left"'
+bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Down" "select-pane -D"' 'if-shell "$is_vim" "send-keys C-J" "send-keys C-Down"'
+bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Up" "select-pane -U"' 'if-shell "$is_vim" "send-keys C-K" "send-keys C-Up"'
+bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Right" "select-pane -R"' 'if-shell "$is_vim" "send-keys C-L" "send-keys C-Right"'
 
 
 #####################################################
