--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Réduire le délai entre les changements de mode
-set-option -g escape-time 0
+set-option -s escape-time 0
 
 
 #####################################################
@@ -144,9 +144,11 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)
 # Keybinds modifiés pour garder le fonctionnement normal de Ctrl+flèches
 # lorsqu'il n'y a qu'un seul panneau existant
 bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Left" "select-pane -L"' 'if-shell "$is_vim" "send-keys C-H" "send-keys C-Left"'
-bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Down" "select-pane -D"' 'if-shell "$is_vim" "send-keys C-J" "send-keys C-Down"'
-bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Up" "select-pane -U"' 'if-shell "$is_vim" "send-keys C-K" "send-keys C-Up"'
+bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Down" "select-pane -D"' 'if-shell "$is_vim" "send-keys C-J" "send-keys Down"'
+bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Up" "select-pane -U"' 'if-shell "$is_vim" "send-keys C-K" "send-keys Up"'
 bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Right" "select-pane -R"' 'if-shell "$is_vim" "send-keys C-L" "send-keys C-Right"'
+bind-key -n 'C-Home' if-shell "$is_vim" "send-keys C-Home" "send-keys Home"
+bind-key -n 'C-End' if-shell "$is_vim" 'send-keys C-End' 'send-keys End'
 
 
 #####################################################
