tmux.conf : touche Escape intelligente.

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,56 +41,6 @@ set-option -s escape-time 0
 
 
 #####################################################
-# K E Y B I N D S                                   #
-#####################################################
-#
-# La touche "Ctrl" n'étant pas sensible à la casse, les combinaisons
-# incluant C-S (Ctrl+Shift) sont impossibles.
-
-# Changer le préfixe
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-# Diviser les fenêtres en utilisant les touches Préfixe+| et Préfixe+-
-unbind '"'
-unbind %
-bind-key -r | split-window -h
-bind-key -r - split-window -v
-
-# Détacher un panneau
-bind-key d break-pane
-bind-key ! detach-client
-
-# Entrer dans le mode "copie" avec Préfixe+Esc
-unbind [
-unbind ]
-bind-key Escape copy-mode
-
-# Permettre aux touches Home, End et Ctrl-Flèches de fonctionner en mode "copie"
-bind-key -T copy-mode-vi Home send-keys 0
-bind-key -T copy-mode-vi End send-keys $
-bind-key -T copy-mode-vi C-Left send-keys -X previous-word
-bind-key -T copy-mode-vi C-Right send-keys -X next-word
-
-# Copier dans le clipboard (au lieu du buffer de tmux)
-# Requiert l'installation du paquet xsel
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-
-# Liste des raccourcis claviers (fn-F1)
-unbind ?
-bind-key -n F1 list-keys
-
-# Afficher l'heure
-bind-key h clock-mode
-
-# Fermer la session courante
-unbind f
-bind-key f kill-session
-
-
-#####################################################
 # C O U L E U R S                                   #
 #####################################################
 #
@@ -135,12 +85,70 @@ set-window-option -g window-status-current-style bg=default,fg=brightred
 
 
 #####################################################
+# K E Y B I N D S                                   #
+#####################################################
+#
+# La touche "Ctrl" n'étant pas sensible à la casse, les combinaisons
+# incluant C-S (Ctrl+Shift) sont impossibles.
+
+# Variable $is_vim pour les keybinds conditionnels et les plugins
+# Vim Tmux Navigator et (Better) Vim Tmux Resizer
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+# Changer le préfixe
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# Diviser les fenêtres en utilisant les touches Préfixe+| et Préfixe+-
+unbind '"'
+unbind %
+bind-key -r | split-window -h
+bind-key -r - split-window -v
+
+# Détacher un panneau
+bind-key d break-pane
+bind-key ! detach-client
+
+# Entrer dans le mode "copie" avec Préfixe+Esc
+unbind [
+unbind ]
+bind-key Escape copy-mode
+
+# Touche Escape intelligente
+bind -T copy-mode-vi Escape if-shell -F '#{selection_present}' 'send-keys -X clear-selection' 'send-keys -X cancel'
+bind-key -n Escape if-shell "$is_vim" 'send-keys Escape' ''
+
+# Permettre aux touches Home, End et Ctrl-Flèches de fonctionner en mode "copie"
+bind-key -T copy-mode-vi Home send-keys 0
+bind-key -T copy-mode-vi End send-keys $
+bind-key -T copy-mode-vi C-Left send-keys -X previous-word
+bind-key -T copy-mode-vi C-Right send-keys -X next-word
+
+# Copier dans le clipboard (au lieu du buffer de tmux)
+# Requiert l'installation du paquet xsel
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+
+# Liste des raccourcis claviers (fn-F1)
+unbind ?
+bind-key -n F1 list-keys
+
+# Afficher l'heure
+bind-key h clock-mode
+
+# Fermer la session courante
+unbind f
+bind-key f kill-session
+
+
+#####################################################
 # P L U G I N   V I M   T M U X   N A V I G A T O R #
 #####################################################
 #
 # https://github.com/christoomey/vim-tmux-navigator
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# La ligne is_vim est déjà définie dans la section "Keybinds"
 # Keybinds modifiés pour garder le fonctionnement normal de Ctrl+flèches
 # lorsqu'il n'y a qu'un seul panneau existant
 bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Left" "select-pane -L"' 'if-shell "$is_vim" "send-keys C-H" "send-keys C-Left"'
@@ -157,8 +165,7 @@ bind-key -n 'C-End' if-shell "$is_vim" 'send-keys C-End' 'send-keys End'
 #
 # https://github.com/RyanMillerC/better-vim-tmux-resizer
 
-# La ligne is_vim est déjà définie pour le plugin Vim Tmux Navigator
-#is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# La ligne is_vim est déjà définie dans la section "Keybinds"
 bind-key -n 'S-Left' if-shell "$is_vim" 'send-keys S-Left' 'resize-pane -L 2'
 bind-key -n 'S-Down' if-shell "$is_vim" 'send-keys S-Down' 'resize-pane -D 2'
 bind-key -n 'S-Up' if-shell "$is_vim" 'send-keys S-Up' 'resize-pane -U 2'
