tmux.conf : remplacement du test trop lent avec is_vim.

--- a/tmux.conf
+++ b/tmux.conf
@@ -91,10 +91,6 @@ set-window-option -g window-status-current-style bg=default,fg=brightred
 # La touche "Ctrl" n'étant pas sensible à la casse, les combinaisons
 # incluant C-S (Ctrl+Shift) sont impossibles.
 
-# Variable $is_vim pour les keybinds conditionnels et les plugins
-# Vim Tmux Navigator et (Better) Vim Tmux Resizer
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
 # Changer le préfixe
 unbind C-b
 set-option -g prefix C-a
@@ -117,7 +113,7 @@ bind-key Escape copy-mode
 
 # Touche Escape intelligente
 bind -T copy-mode-vi Escape if-shell -F '#{selection_present}' 'send-keys -X clear-selection' 'send-keys -X cancel'
-bind-key -n Escape if-shell "$is_vim" 'send-keys Escape' ''
+bind-key -n Escape if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" '' 'send-keys Escape'
 
 # Permettre aux touches Home, End et Ctrl-Flèches de fonctionner en mode "copie"
 bind-key -T copy-mode-vi Home send-keys 0
@@ -148,15 +144,15 @@ bind-key f kill-session
 #
 # https://github.com/christoomey/vim-tmux-navigator
 
-# La ligne is_vim est déjà définie dans la section "Keybinds"
 # Keybinds modifiés pour garder le fonctionnement normal de Ctrl+flèches
-# lorsqu'il n'y a qu'un seul panneau existant
-bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Left" "select-pane -L"' 'if-shell "$is_vim" "send-keys C-H" "send-keys C-Left"'
-bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Down" "select-pane -D"' 'if-shell "$is_vim" "send-keys C-J" "send-keys Down"'
-bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Up" "select-pane -U"' 'if-shell "$is_vim" "send-keys C-K" "send-keys Up"'
-bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1' 'if-shell "$is_vim" "send-keys C-Right" "select-pane -R"' 'if-shell "$is_vim" "send-keys C-L" "send-keys C-Right"'
-bind-key -n 'C-Home' if-shell "$is_vim" "send-keys C-Home" "send-keys Home"
-bind-key -n 'C-End' if-shell "$is_vim" 'send-keys C-End' 'send-keys End'
+# lorsqu'il n'y a qu'un seul panneau existant + remplacement du test trop
+# lent avec is_vim.
+bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -L" "send-keys C-Left"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Left" "send-keys C-H"'
+bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -D" "send-keys C-Down"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Down" "send-keys C-J"'
+bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -U" "send-keys C-Up"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Up" "send-keys C-K"'
+bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -R" "send-keys C-Right"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Right" "send-keys C-L"'
+bind-key -n 'C-Home' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'send-keys Home' 'send-keys C-Home'
+bind-key -n 'C-End' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'send-keys End' 'send-keys C-End'
 
 
 #####################################################
@@ -165,8 +161,8 @@ bind-key -n 'C-End' if-shell "$is_vim" 'send-keys C-End' 'send-keys End'
 #
 # https://github.com/RyanMillerC/better-vim-tmux-resizer
 
-# La ligne is_vim est déjà définie dans la section "Keybinds"
-bind-key -n 'S-Left' if-shell "$is_vim" 'send-keys S-Left' 'resize-pane -L 2'
-bind-key -n 'S-Down' if-shell "$is_vim" 'send-keys S-Down' 'resize-pane -D 2'
-bind-key -n 'S-Up' if-shell "$is_vim" 'send-keys S-Up' 'resize-pane -U 2'
-bind-key -n 'S-Right' if-shell "$is_vim" 'send-keys S-Right' 'resize-pane -R 2'
+# Keybinds modifiés pour remplacement du test trop lent avec is_vim.
+bind-key -n 'S-Left' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -L 2' 'send-keys S-Left'
+bind-key -n 'S-Down' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -D 2' 'send-keys S-Down'
+bind-key -n 'S-Up' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -U 2' 'send-keys S-Up'
+bind-key -n 'S-Right' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -R 2' 'send-keys S-Right'
