--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Réduire le délai entre les changements de mode
-set-option -s escape-time 0
+set-option -gs escape-time 0
 
 
 #####################################################
@@ -145,12 +145,12 @@ bind-key f kill-session
 # https://github.com/christoomey/vim-tmux-navigator
 
 # Keybinds modifiés pour garder le fonctionnement normal de Ctrl+flèches
-# lorsqu'il n'y a qu'un seul panneau existant + remplacement du test trop
-# lent avec is_vim.
-bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -L" "send-keys C-Left"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Left" "send-keys C-H"'
-bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -D" "send-keys C-Down"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Down" "send-keys C-J"'
-bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -U" "send-keys C-Up"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Up" "send-keys C-K"'
-bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -R" "send-keys C-Right"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Right" "send-keys C-L"'
+# lorsqu'il n'y a qu'un seul panneau existant ou que le panneau est zoomé
+# + remplacement du test trop lent avec is_vim.
+bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -L" "send-keys C-Left"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Left" "send-keys C-H"'
+bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -D" "send-keys C-Down"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Down" "send-keys C-J"'
+bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -U" "send-keys C-Up"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Up" "send-keys C-K"'
+bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -R" "send-keys C-Right"' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Right" "send-keys C-L"'
 bind-key -n 'C-Home' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'send-keys Home' 'send-keys C-Home'
 bind-key -n 'C-End' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'send-keys End' 'send-keys C-End'
 
