Rotation des panneaux avec Prefixe+r dans tmux (comme dans vim).

--- a/tmux.conf
+++ b/tmux.conf
@@ -106,6 +106,10 @@ bind-key -r - split-window -v
 bind-key d break-pane
 bind-key ! detach-client
 
+# Rotation des panneaux avec r (comme dans Vim) au lieu de C-o
+unbind -T prefix C-o
+bind-key -T prefix r rotate-window
+
 # Entrer dans le mode "copie" avec Préfixe+Esc
 unbind [
 unbind ]
