tmux.conf : indicateur de préfixe dans la barre de statut.

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,7 +72,7 @@ set-window-option -g clock-mode-colour green
 #####################################################
 
 # Ne rien afficher dans la partie en bas à droite
-set-option -g status-right ''
+set-option -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse],}'
 
 # Couleurs
 set-option -g status-style bg=default,fg=yellow
