--- a/tmux.conf
+++ b/tmux.conf
@@ -122,6 +122,10 @@ bind-key -n Escape if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" '' 'send
 # Permettre aux touches Home, End et Ctrl-Flèches de fonctionner en mode "copie"
 bind-key -T copy-mode-vi Home send-keys 0
 bind-key -T copy-mode-vi End send-keys $
+bind-key -T copy-mode-vi 'C-Left' send-keys -X previous-word
+bind-key -T copy-mode-vi 'C-Down' 'send-keys -X cursor-down'
+bind-key -T copy-mode-vi 'C-Up' 'send-keys -X cursor-up'
+bind-key -T copy-mode-vi 'C-Right' send-keys -X next-word
 
 # Copier dans le clipboard (au lieu du buffer de tmux)
 # Requiert l'installation du paquet xsel
@@ -146,19 +150,15 @@ bind-key f kill-session
 #
 # https://github.com/christoomey/vim-tmux-navigator
 
-# Keybinds modifiés pour garder le fonctionnement normal de Ctrl+flèches
-# lorsqu'il n'y a qu'un seul panneau existant ou que le panneau est zoomé
-# + remplacement du test trop lent avec is_vim.
-bind-key -n 'C-Left' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -L" "if -F \"#{pane_at_left}\" \"send-keys C-H\" \"send-keys C-Left\""' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Left" "send-keys C-H"'
-bind-key -n 'C-Down' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -D" "if -F \"#{pane_at_bottom}\" \"send-keys C-J\" \"send-keys C-Down\""' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Down" "send-keys C-J"'
-bind-key -n 'C-Up' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -U" "if -F \"#{pane_at_top}\" \"send-keys C-K\" \"send-keys C-Up\""' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Up" "send-keys C-K"'
-bind-key -n 'C-Right' if-shell 'test #{window_panes} -gt 1 && test #{window_zoomed_flag} -ne 1' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "select-pane -R" "if -F \"#{pane_at_right}\" \"send-keys C-L\" \"send-keys C-Right\""' 'if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" "send-keys C-Right" "send-keys C-L"'
-bind-key -T copy-mode-vi 'C-Left' send-keys -X previous-word
-bind-key -T copy-mode-vi 'C-Down' if -F '#{pane_at_bottom}' 'send-keys -X cursor-down' 'select-pane -D'
-bind-key -T copy-mode-vi 'C-Up' if -F '#{pane_at_top}' 'send-keys -X cursor-up' 'select-pane -U'
-bind-key -T copy-mode-vi 'C-Right' send-keys -X next-word
-bind-key -n 'C-Home' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'send-keys Home' 'send-keys C-Home'
-bind-key -n 'C-End' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'send-keys End' 'send-keys C-End'
+# Keybinds modifiés pour remplacement du test trop lent avec is_vim.
+bind-key -n 'S-Left' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'select-pane -L' 'send-keys S-Left'
+bind-key -n 'S-Down' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'select-pane -D' 'send-keys S-Down'
+bind-key -n 'S-Up' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'select-pane -U' 'send-keys S-Up'
+bind-key -n 'S-Right' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'select-pane -R' 'send-keys S-Right'
+bind-key -T copy-mode-vi 'S-Left' select-pane -L
+bind-key -T copy-mode-vi 'S-Down' select-pane -D
+bind-key -T copy-mode-vi 'S-Up' select-pane -U
+bind-key -T copy-mode-vi 'S-Right' select-pane -R
 
 
 #####################################################
@@ -168,7 +168,7 @@ bind-key -n 'C-End' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'send-k
 # https://github.com/RyanMillerC/better-vim-tmux-resizer
 
 # Keybinds modifiés pour remplacement du test trop lent avec is_vim.
-bind-key -n 'S-Left' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -L 2' 'send-keys S-Left'
-bind-key -n 'S-Down' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -D 2' 'send-keys S-Down'
-bind-key -n 'S-Up' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -U 2' 'send-keys S-Up'
-bind-key -n 'S-Right' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -R 2' 'send-keys S-Right'
+bind-key -n 'M-Left' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -L 2' 'send-keys M-Left'
+bind-key -n 'M-Down' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -D 2' 'send-keys M-Down'
+bind-key -n 'M-Up' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -U 2' 'send-keys M-Up'
+bind-key -n 'M-Right' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -R 2' 'send-keys M-Right'
