tmux.conf : modification de certaines couleurs.

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,15 +53,15 @@ set-option -sg escape-time 0
 # for i in {0..255};do printf "\x1b[38;5;${i}mcolour${i}\x1b[0m\n";done
 
 # Délimitation des panneaux
-set-option -g pane-border-style fg=colour239
+set-option -g pane-border-style fg=black
 set-option -g pane-active-border-style fg=green
 
 # message text
-set-option -g message-style bg=black,fg=brightred
+set-option -g message-style bg=black,fg=red
 
-# pane number display
-set-option -g display-panes-active-colour blue
-set-option -g display-panes-colour brightred
+# Numéros des panneaux (affichés avec les touches Préfixe+q)
+set-option -g display-panes-colour yellow
+set-option -g display-panes-active-colour red
 
 # Heure
 set-window-option -g clock-mode-colour green
@@ -78,10 +78,10 @@ set-option -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse],}'
 set-option -g status-style bg=default,fg=yellow
 
 # Couleurs par défaut pour le nom des fenêtres
-set-window-option -g window-status-style bg=default,fg=brightblue
+set-window-option -g window-status-style bg=default,fg=yellow
 
 # Couleurs du nom de la fenêtre active
-set-window-option -g window-status-current-style bg=default,fg=brightred
+set-window-option -g window-status-current-style bg=default,fg=red,bold,underscore
 
 
 #####################################################
@@ -106,7 +106,7 @@ bind-key -r - split-window -v
 bind-key d break-pane
 bind-key ! detach-client
 
-# Rotation des panneaux avec r (comme dans Vim) au lieu de C-o
+# Rotation des panneaux avec r (comme dans Vim) au lieu de Ctrl+o
 unbind -T prefix C-o
 bind-key -T prefix r rotate-window
 
