--- a/tmux.conf
+++ b/tmux.conf
@@ -106,6 +106,10 @@ bind-key -r - split-window -v
 bind-key d break-pane
 bind-key ! detach-client
 
+# Afficher les numéros des panneaux avec Ctrl+q jusqu'à ce qu'une touche
+# soit tapée
+bind -T prefix q display-panes -d 0
+
 # Rotation des panneaux avec r (comme dans Vim) au lieu de Ctrl+o
 unbind -T prefix C-o
 bind-key -T prefix r rotate-window
