tmux.conf : reformulation de certains commentaires.

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,6 @@
 # https://github.com/tmux/tmux/blob/master/example_tmux.conf
 # On peut aussi créer un fichier de configuration par défaut à partir des
 # paramètres actuels avec l'instruction : tmux show -g > ~/.tmux.conf
-# ou (avant la version 1.8) tmux show -g | cat > ~/.tmux.conf
 #
 # set est un alias pour set-option
 # setw est un alias pour set-window-option
@@ -15,29 +14,32 @@
 # Déclencher les événements corrects de focus, notamment pour vim
 set-option -g focus-events on
 
-# Délai entre deux commandes sans répéter le préfixe, en ms (défaut : 500)
+# Délai entre deux commandes sans répéter le préfixe, en ms (500 par défaut)
 # Vaut pour tous les raccourcis/keybinds définis avec l'option -r
 set-option -g repeat-time 200
 
+# Délai après appui de la touche Escape pendant lequel elle sera considérée
+# comme faisant partie d'une séquence de touches, en ms (500 par défaut)
+# Vaut notamment pour le passage en mode "copie"
+set-option -sg escape-time 0
+
+# Durée d'affichage des messages (affichés avec tmux display-message '...'),
+# en ms (750 par défaut)
+set-option -g display-time 3000
+
 # Changer l'environnement pour permettre l'affichage des italiques
 set-option -g default-terminal "tmux"
-
-# Changer pour les touches spéciales
-set-window-option -g xterm-keys on
 
 # Nombre de lignes pour le scrollback (2000 par défaut)
 # Dépend aussi du nombre de lignes fixé par URxvt dans ~/.Xresources
 # ! Peut utiliser beaucoup de RAM si plusieurs fenêtres sont ouvertes !
 set-option -g history-limit 8192
 
-# Scrolling à la souris ou au touchpad
+# Permettre le scrolling à la souris ou au touchpad
 set-option -g mouse on
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
-
-# Réduire le délai entre les changements de mode
-set-option -sg escape-time 0
 
 
 #####################################################
@@ -47,7 +49,7 @@ set-option -sg escape-time 0
 # Les couleurs possibles (cf. man tmux) sont : default, black, red, green,
 # yellow, blue, magenta, cyan, white ainsi que certaines variantes avec
 # "bright" (par ex. brightred, brightgreen...), les couleurs colour0 à
-# colour255, ou les valeurs hexadécimalex RGB comme #ffffff.
+# colour255, ou les valeurs hexadécimalex RGB comme #ffffff
 #
 # Pour obtenir la liste des couleurs de colour0 à colour255 dans bash :
 # for i in {0..255};do printf "\x1b[38;5;${i}mcolour${i}\x1b[0m\n";done
@@ -56,10 +58,10 @@ set-option -sg escape-time 0
 set-option -g pane-border-style fg=black
 set-option -g pane-active-border-style fg=green
 
-# message text
-set-option -g message-style bg=black,fg=red
+# Messages
+set-option -g message-style bg=default,fg=red
 
-# Numéros des panneaux (affichés avec les touches Préfixe+q)
+# Numéros des panneaux (affichés avec les touches Préfixe-q)
 set-option -g display-panes-colour yellow
 set-option -g display-panes-active-colour red
 
@@ -74,13 +76,13 @@ set-window-option -g clock-mode-colour green
 # Ne rien afficher dans la partie en bas à droite
 set-option -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse],}'
 
-# Couleurs
+# Style de la barre
 set-option -g status-style bg=default,fg=yellow
 
-# Couleurs par défaut pour le nom des fenêtres
+# Style par défaut pour le nom des fenêtres
 set-window-option -g window-status-style bg=default,fg=yellow
 
-# Couleurs du nom de la fenêtre active
+# Style pour le nom de la fenêtre active
 set-window-option -g window-status-current-style bg=default,fg=red,bold,underscore
 
 
@@ -89,14 +91,14 @@ set-window-option -g window-status-current-style bg=default,fg=red,bold,undersco
 #####################################################
 #
 # La touche "Ctrl" n'étant pas sensible à la casse, les combinaisons
-# incluant C-S (Ctrl+Shift) sont impossibles.
+# incluant C-S (Ctrl+Shift) sont impossibles
 
 # Changer le préfixe
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# Diviser les fenêtres en utilisant les touches Préfixe+| et Préfixe+-
+# Diviser les fenêtres en utilisant les touches Préfixe-| et Préfixe--
 unbind '"'
 unbind %
 bind-key -r | split-window -h
@@ -106,15 +108,15 @@ bind-key -r - split-window -v
 bind-key d break-pane
 bind-key ! detach-client
 
-# Afficher les numéros des panneaux avec Ctrl+q jusqu'à ce qu'une touche
+# Afficher les numéros des panneaux avec Ctrl-q jusqu'à ce qu'une touche
 # soit tapée
 bind -T prefix q display-panes -d 0
 
-# Rotation des panneaux avec r (comme dans Vim) au lieu de Ctrl+o
+# Rotation des panneaux avec Préfixe-r (comme dans Vim)
 unbind -T prefix C-o
 bind-key -T prefix r rotate-window
 
-# Entrer dans le mode "copie" avec Préfixe+Esc
+# Entrer dans le mode "copie" avec Préfixe-Esc
 unbind [
 unbind ]
 bind-key Escape copy-mode
@@ -136,11 +138,11 @@ bind-key -T copy-mode-vi 'C-Right' send-keys -X next-word
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 
-# Liste des raccourcis claviers (fn-F1)
+# Liste des raccourcis claviers
 unbind ?
 bind-key -n F1 list-keys
 
-# Afficher l'heure
+# Afficher l'heure avec Préfixe-h (en plus de Préfixe-t par défaut)
 bind-key h clock-mode
 
 # Fermer la session courante
@@ -154,7 +156,7 @@ bind-key f kill-session
 #
 # https://github.com/christoomey/vim-tmux-navigator
 
-# Keybinds modifiés pour remplacement du test trop lent avec is_vim.
+# Keybinds modifiés pour remplacer le test trop lent dû à is_vim
 bind-key -n 'S-Left' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'select-pane -L' 'send-keys S-Left'
 bind-key -n 'S-Down' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'select-pane -D' 'send-keys S-Down'
 bind-key -n 'S-Up' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'select-pane -U' 'send-keys S-Up'
@@ -171,7 +173,7 @@ bind-key -T copy-mode-vi 'S-Right' select-pane -R
 #
 # https://github.com/RyanMillerC/better-vim-tmux-resizer
 
-# Keybinds modifiés pour remplacement du test trop lent avec is_vim.
+# Keybinds modifiés pour remplacer le test trop lent dû à is_vim
 bind-key -n 'M-Left' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -L 2' 'send-keys M-Left'
 bind-key -n 'M-Down' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -D 2' 'send-keys M-Down'
 bind-key -n 'M-Up' if -F "#{?#{m:\*vim\*,#{pane_current_command}},0,1}" 'resize-pane -U 2' 'send-keys M-Up'
