tmux.conf : correction Prefix > Préfixe.

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,8 +73,9 @@ set-window-option -g clock-mode-colour green
 # B A R R E   D ' É T A T                           #
 #####################################################
 
-# Ne rien afficher dans la partie en bas à droite
-set-option -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse],}'
+# Afficher "Préfixe" dans la partie droite quand les touches
+# correspondantes ont été tapées
+set-option -g status-right ' #{?client_prefix,#[reverse]<Préfixe>#[noreverse],}'
 
 # Style de la barre
 set-option -g status-style bg=default,fg=yellow
