tmux.conf : modification de l'indicateur pour le préfixe.

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,9 +73,9 @@ set-window-option -g clock-mode-colour green
 # B A R R E   D ' É T A T                           #
 #####################################################
 
-# Afficher "Préfixe" dans la partie droite quand les touches
+# Afficher le préfixe dans la partie droite quand les touches
 # correspondantes ont été tapées
-set-option -g status-right ' #{?client_prefix,#[reverse]<Préfixe>#[noreverse],}'
+set-option -g status-right ' #{?client_prefix,#[reverse] ^A #[noreverse],}'
 
 # Style de la barre
 set-option -g status-style bg=default,fg=yellow
