--- a/redshift.conf
+++ b/redshift.conf
@@ -1,11 +1,10 @@
 ; Un fichier de configuration par défaut est disponible à l'adresse :
-; https://github.com/jonls/redshift/blob/master/redshift.conf.sample
+; https://raw.githubusercontent.com/jonls/redshift/master/redshift.conf.sample
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
 ;temp-day=5700
 ;temp-night=3500
-; Températures :
 ; > 6500 = bleuté ; 6500 = neutre (aucun changement) ; < 6500 = rouge
 temp-day=6200
 temp-night=5200
@@ -13,12 +12,29 @@ temp-night=5200
 ; Disable the smooth fade between temperatures when Redshift starts and stops.
 ; 0 will cause an immediate change between screen temperatures.
 ; 1 will gradually apply the new screen temperature over a couple of seconds.
-transition=1
+fade=1
+
+; Solar elevation thresholds.
+; By default, Redshift will use the current elevation of the sun to determine
+; whether it is daytime, night or in transition (dawn/dusk). When the sun is
+; above the degrees specified with elevation-high it is considered daytime and
+; below elevation-low it is considered night.
+;elevation-high=3
+;elevation-low=-6
+
+; Custom dawn/dusk intervals.
+; Instead of using the solar elevation, the time intervals of dawn and dusk
+; can be specified manually. The times must be specified as HH:MM in 24-hour
+; format.
+;dawn-time=6:00-7:45
+;dusk-time=18:35-20:15
 
 ; Set the screen brightness. Default is 1.0.
 ;brightness=0.9
 ; It is also possible to use different settings for day and night
 ; since version 1.8.
+;brightness-day=0.7
+;brightness-night=0.4
 brightness-day=1.0
 brightness-night=0.8
 ; Set the screen gamma (for all colors, or each color channel
@@ -30,7 +46,7 @@ gamma=0.8
 ;gamma-day=0.8:0.7:0.8
 ;gamma-night=0.6
 
-; Set the location-provider: 'geoclue', 'geoclue2', 'manual'
+; Set the location-provider: 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
 ; The location provider settings are in a different section.
 location-provider=manual
@@ -48,6 +64,8 @@ adjustment-method=randr
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
 [manual]
+lat=48.1
+lon=11.6
 lat=48.5
 lon=2.2
 
