--- a/redshift.conf
+++ b/redshift.conf
@@ -64,8 +64,8 @@ adjustment-method=randr
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
 [manual]
-lat=48.1
-lon=11.6
+;lat=48.1
+;lon=11.6
 lat=48.5
 lon=2.2
 
