Remplacement de transset-df par picom-trans.

--- a/picom.conf
+++ b/picom.conf
@@ -145,7 +145,7 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+#focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -158,6 +158,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
+opacity-rule = [ "85:class_g = 'st-256color'" ];
 
 
 #################################
