input.conf : = OU + pour zoomer dans mpv.

--- a/input.conf
+++ b/input.conf
@@ -13,6 +13,7 @@
 #
 - add video-zoom -0.25
 = add video-zoom 0.25
++ add video-zoom 0.25
 * no-osd set video-zoom 0; no-osd set video-pan-x 0; no-osd set video-pan-y 0; cycle-values video-unscaled "yes" "no"
 . ignore
 , ignore
