--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 # for i in {0..255};do printf "\x1b[38;5;${i}mcolour${i}\x1b[0m\n";done
 
 # Délimitation des panneaux
-set-option -g pane-border-style fg=black
+set-option -g pane-border-style fg=colour241
 set-option -g pane-active-border-style fg=green
 
 # Messages
