Ajout de raccourcis pour diviser les fenêtres dans tmux et vim.

--- a/tmux.conf
+++ b/tmux.conf
@@ -98,19 +98,17 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# Diviser les fenêtres en utilisant les touches Préfixe-| et Préfixe--
+# Diviser les fenêtres avec les touches Préfixe et | ou \ et - ou _
 unbind '"'
 unbind %
 bind-key -r | split-window -h
 bind-key -r - split-window -v
+bind-key -r '\' split-window -fh
+bind-key -r _ split-window -fv
 
 # Détacher un panneau
 bind-key d break-pane
 bind-key ! detach-client
-
-# Afficher les numéros des panneaux avec Ctrl-q jusqu'à ce qu'une touche
-# soit tapée
-bind -T prefix q display-panes -d 0
 
 # Rotation des panneaux avec Préfixe-r (comme dans Vim)
 unbind -T prefix C-o
