mpv : inversion du comportement des raccourcis I et i.

--- a/input.conf
+++ b/input.conf
@@ -33,6 +33,8 @@ PGUP add chapter -1
 PGDWN add chapter 1
 Shift+PGUP seek -600
 Shift+PGDWN seek 600
+i script-binding stats/display-stats-toggle
+I script-binding stats/display-stats
 #L add video-rotate -90
 #R add video-rotate 90
 L script-message Cycle_Video_Rotate -90
