thunderbird.cfg : recevoir les messages au format texte.

--- a/thunderbird.cfg
+++ b/thunderbird.cfg
@@ -143,7 +143,6 @@ lockPref("mailnews.auto_config.guess.enabled", false);
 lockPref("mailnews.auto_config_url", "");
 lockPref("mailnews.display.date_senders_timezone", false);
 lockPref("mailnews.display.disallow_mime_handlers", 3);
-lockPref("mailnews.display.html_as", 3); // Mettre la valeur 1 pour afficher les messages comme du texte
 lockPref("mailnews.display.original_date", false);
 lockPref("mailnews.display.prefer_plaintext", false);
 lockPref("mailnews.headers.showSender", true);
@@ -292,6 +291,7 @@ lockPref("webgl.min_capability_mode", true);
 lockPref("extensions.blocklist.enabled", false); // [DEFAULT: true]
 //lockPref("extensions.enabledScopes", 1); // [HIDDEN PREF] À commenter, sinon l'interface n'est plus en français (= casse les language packs)
 lockPref("mail.tabs.autoHide", false); // Ne pas masquer la barre des onglets
+lockPref("mailnews.display.html_as", 1); // Afficher les messages au format texte
 
 // ABSENTES DANS HorlogeSkynet/thunderbird-user.js
 lockPref("browser.bookmarks.max_backups", 0);
