--- a/thunderbird.cfg
+++ b/thunderbird.cfg
@@ -143,6 +143,7 @@ lockPref("mailnews.auto_config.guess.enabled", false);
 lockPref("mailnews.auto_config_url", "");
 lockPref("mailnews.display.date_senders_timezone", false);
 lockPref("mailnews.display.disallow_mime_handlers", 3);
+lockPref("mailnews.display.html_as", 3); // Mettre la valeur 1 pour afficher les messages au format texte
 lockPref("mailnews.display.original_date", false);
 lockPref("mailnews.display.prefer_plaintext", false);
 lockPref("mailnews.headers.showSender", true);
@@ -291,13 +292,13 @@ lockPref("webgl.min_capability_mode", true);
 lockPref("extensions.blocklist.enabled", false); // [DEFAULT: true]
 //lockPref("extensions.enabledScopes", 1); // [HIDDEN PREF] À commenter, sinon l'interface n'est plus en français (= casse les language packs)
 lockPref("mail.tabs.autoHide", false); // Ne pas masquer la barre des onglets
-lockPref("mailnews.display.html_as", 1); // Afficher les messages au format texte
 
 // ABSENTES DANS HorlogeSkynet/thunderbird-user.js
 lockPref("browser.bookmarks.max_backups", 0);
 lockPref("browser.download.manager.retention", 0);
 lockPref("clipboard.autocopy", false);
 lockPref("extensions.update.enabled", false);
+lockPref("network.protocol-handler.external-default", false); // Empêcher que les liens dans les messages ne soient cliquables
 lockPref("privacy.trackingprotection.enabled", false);
 lockPref("privacy.trackingprotection.pbmode.enabled", false);
 lockPref("security.ask_for_password", 0);
