--- a/thunderbird.cfg
+++ b/thunderbird.cfg
@@ -10,7 +10,6 @@ lockPref("beacon.enabled", false);
 lockPref("breakpad.reportURL", "");
 lockPref("browser.aboutConfig.showWarning", false); // HTML version [FF71+]
 lockPref("browser.cache.disk.enable", false);
-lockPref("browser.cache.memory.enable", false);
 lockPref("browser.cache.offline.enable", false);
 lockPref("browser.chrome.site_icons", false);
 lockPref("browser.crashReports.unsubmittedCheck.autoSubmit2", false); // [FF58+]
@@ -143,9 +142,7 @@ lockPref("mailnews.auto_config.guess.enabled", false);
 lockPref("mailnews.auto_config_url", "");
 lockPref("mailnews.display.date_senders_timezone", false);
 lockPref("mailnews.display.disallow_mime_handlers", 3);
-lockPref("mailnews.display.html_as", 3); // Mettre la valeur 1 pour afficher les messages au format texte
 lockPref("mailnews.display.original_date", false);
-lockPref("mailnews.display.prefer_plaintext", false);
 lockPref("mailnews.headers.showSender", true);
 lockPref("mailnews.headers.showUserAgent", false);
 lockPref("mailnews.reply_header_authorwrotesingle", "#1 wrote:");
@@ -266,7 +263,6 @@ lockPref("security.tls.enable_0rtt_data", false);
 lockPref("security.warn_entering_weak", true);
 lockPref("security.warn_leaving_secure", true);
 lockPref("security.warn_viewing_mixed", true);
-lockPref("spellchecker.dictionary", "en-US");
 lockPref("svg.disabled", true);
 lockPref("toolkit.telemetry.archive.enabled", false);
 lockPref("toolkit.telemetry.bhrPing.enabled", false); // [FF57+] Background Hang Reporter
@@ -289,18 +285,34 @@ lockPref("webgl.enable-webgl2", false);
 lockPref("webgl.min_capability_mode", true);
 
 // VALEURS DIFFÉRENTES DANS HorlogeSkynet/thunderbird-user.js
+//lockPref("browser.cache.memory.enable", false); // À commenter, sinon pose des problèmes pour télécharger les pièces jointes
 lockPref("extensions.blocklist.enabled", false); // [DEFAULT: true]
 //lockPref("extensions.enabledScopes", 1); // [HIDDEN PREF] À commenter, sinon l'interface n'est plus en français (= casse les language packs)
 lockPref("mail.tabs.autoHide", false); // Ne pas masquer la barre des onglets
+lockPref("mailnews.display.html_as", 1); // Afficher les messages au format texte
+lockPref("mailnews.display.prefer_plaintext", true); // Choisir la version texte quand il existe à la fois une version HTML et une version texte
+lockPref("spellchecker.dictionary", "fr-FR"); // Au lieu de en-US, pour la correction orthographique en français
+
+// PRÉSENTES DANS HorlogeSkynet/thunderbird-user.js MAIS COMMENTÉES
+lockPref("browser.safebrowsing.allowOverride", false);
+lockPref("browser.safebrowsing.downloads.enabled", false);
+lockPref("browser.safebrowsing.downloads.remote.block_potentially_unwanted", false);
+lockPref("browser.safebrowsing.downloads.remote.block_uncommon", false);
+lockPref("browser.safebrowsing.malware.enabled", false);
+lockPref("browser.safebrowsing.phishing.enabled", false);
+lockPref("clipboard.autocopy", false);
+lockPref("extensions.update.enabled", false);
 
 // ABSENTES DANS HorlogeSkynet/thunderbird-user.js
 lockPref("browser.bookmarks.max_backups", 0);
-lockPref("browser.download.manager.retention", 0);
-lockPref("clipboard.autocopy", false);
-lockPref("extensions.update.enabled", false);
-lockPref("network.protocol-handler.external-default", false); // Empêcher que les liens dans les messages ne soient cliquables
+lockPref("intl.locale.requested", ""); // Utiliser la variable d'environnement LANG pour choisir la langue
+lockPref("mailnews.default_sort_order", 1); // Par défaut, trier par ordre croissant
+lockPref("mailnews.default_sort_type", 18); // Par défaut, trier par date
+lockPref("mailnews.default_view_flags", 64); // Par défaut, grouper par critère de tri
+lockPref("network.protocol-handler.external-default", false); // Empêcher que les liens dans les messages ne soient cliquables (obliger à copier/coller les liens dans un navigateur)
 lockPref("privacy.trackingprotection.enabled", false);
 lockPref("privacy.trackingprotection.pbmode.enabled", false);
 lockPref("security.ask_for_password", 0);
 lockPref("signon.autofillForms", false);
 lockPref("signon.storeWhenAutocompleteOff", false);
+lockPref("spellchecker.dictionary_path", "/usr/share/hunspell"); // Utiliser les dictionnaires installés au niveau du système
