playlistmanager.conf : màj.

--- a/playlistmanager.conf
+++ b/playlistmanager.conf
@@ -43,6 +43,9 @@ system=auto
 #Use ~ for home directory. Leave as empty to use mpv/playlists
 playlist_savepath=
 
+#save playlist automatically after current file was unloaded
+save_playlist_on_file_end=no
+
 #2 shows playlist, 1 shows current file(filename strip applied), 0 shows nothing
 show_playlist_on_fileload=0
 
